[gd_scene load_steps=2 format=3 uid="uid://baypuv2nilt2g"]

[ext_resource type="Script" uid="uid://74gbhmpweh1t" path="res://ui/TypingIndicator.gd" id="1_1"]

[node name="TypingIndicator" type="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 24)
script = ExtResource("1_1")

[node name="Dots" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Dot1" type="Panel" parent="Dots"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Dot2" type="Panel" parent="Dots"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Dot3" type="Panel" parent="Dots"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="."]
layout_mode = 2
vertical_alignment = 1
